--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,7 +2,7 @@
     box-sizing : border-box;
 }
 
-main {
+#main {
     background-color: red;
     display: grid;
     grid-template-columns: auto auto auto ;
